--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="tweet">Tweet</string>
     <string name="cancel">Cancel</string>
     <string name="refresh">Refresh</string>
+    <string name="profile">Profile</string>
 
 </resources>
